compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__document_symbols__doc_symbols_type_no_constructors_starting_at_empty_doc.snap
---
source: compiler-core/src/language_server/tests/document_symbols.rs
assertion_line: 44
expression: "doc_symbols(TestProject::for_source(code))"
---
[
    DocumentSymbol {
        name: "A",
        detail: None,
        kind: Class,
        tags: None,
        deprecated: None,
        range: Range {
            start: Position {
                line: 3,
                character: 0,
            },
            end: Position {
                line: 4,
                character: 10,
            },
        },
        selection_range: Range {
            start: Position {
                line: 4,
                character: 9,
            },
            end: Position {
                line: 4,
                character: 10,
            },
        },
        children: None,
    },
]
